Fixed width and gap of the nav menu

--- a/style.css
+++ b/style.css
@@ -198,10 +198,10 @@ a {
         right: -100%;
         top: 0px;
         height: 100vh;
-        width: 70%;
+        width: 80%;
         justify-content: center;
         align-items: center;
-        gap: 2.5rem;
+        gap: 3rem;
         flex-direction: column;
         background-color: var(--navbar-mobile-bg-color);
         z-index: 10000;
